--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -18,6 +18,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
+    "jsonwebtoken": "^8.4.0",
     "mocha": "^5.2.0",
     "mysql": "^2.16.0"
   },
