--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -41,6 +41,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "mdbreact": "^4.10.0",
     "node-hot": "^4.0.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
