--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -40,7 +40,9 @@
     "rimraf": "^2.6.2"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.7.1",
     "axios": "^0.18.0",
+    "bootstrap-css-only": "^4.2.1",
     "mdbreact": "^4.10.0",
     "node-hot": "^4.0.1",
     "react": "^16.4.1",
