--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -46,7 +46,12 @@
     "mdbreact": "^4.10.0",
     "node-hot": "^4.0.1",
     "react": "^16.4.1",
+    "react-beautiful-dnd": "^10.0.4",
     "react-dom": "^16.4.1",
+    "react-drag-and-drop": "^3.0.0",
+    "react-draggable": "^3.1.1",
+    "react-dropzone": "^8.0.4",
+    "react-dropzone-component": "^3.2.0",
     "react-hot-loader": "^4.3.4",
     "react-materialize": "^2.6.0",
     "react-redux": "^5.0.7",
