--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -37,7 +37,8 @@
     "prettier": "^1.14.0",
     "redux-devtools-extension": "^2.13.5",
     "redux-logger": "^3.0.6",
-    "rimraf": "^2.6.2"
+    "rimraf": "^2.6.2",
+    "style-loader": "^0.23.1"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.7.1",
